feat(DevKit): 实现主题切换功能
- 在 App.xaml 中添加了 Light 和 Dark 主题的资源字典
- 在 App.xaml.cs 中实现了 SwitchTheme 方法，用于切换主题
- 新增了 ColorBrushes.xaml、DarkColor.xaml 和 LightColor.xaml 文件，定义了主题颜色
- 更新了 MainWindow.xaml 中的样式，使用动态资源引用以支持主题切换

--- a/DevKit/App.xaml
+++ b/DevKit/App.xaml
@@ -11,6 +11,9 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/SkinDefault.xaml"/>
                 <ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/Theme.xaml"/>
+                
+                <ResourceDictionary Source="Colors/LightColor.xaml"/>
+                <ResourceDictionary Source="Colors/ColorBrushes.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
