feat MainWindow.xaml: 添加置顶显示图标并调整布局
- 在第一列添加了置顶显示图标，使用 iconfont 字体
-调整了第二个 TextBlock 的左边距，以优化界面布局

--- a/DevKit/Views/MainWindow.xaml
+++ b/DevKit/Views/MainWindow.xaml
@@ -72,10 +72,16 @@
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
 
-                <TextBlock Grid.Column="0" />
+                <TextBlock
+                    Grid.Column="0"
+                    VerticalAlignment="Center"
+                    FontFamily="/DevKit;component/Fonts/#iconfont"
+                    FontSize="16"
+                    Text="&#xea89;" />
 
                 <TextBlock
                     Grid.Column="1"
+                    Margin="8,0,0,0"
                     VerticalAlignment="Center"
                     Foreground="{DynamicResource DevKitTextBrush}"
                     Text="置顶显示" />
