--- a/DevKit/Views/MainWindow.xaml
+++ b/DevKit/Views/MainWindow.xaml
@@ -2,7 +2,6 @@
     x:Class="DevKit.Views.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -103,18 +102,10 @@
             Text="Android工具" />
 
         <ListBox
-            x:Name="AndroidToolsListBox"
             Grid.Row="2"
             Background="Transparent"
             BorderThickness="0"
-            ItemContainerStyle="{StaticResource ListBoxItemStyleKey}"
             ItemsSource="{Binding AndroidTools}">
-            <b:Interaction.Triggers>
-                <b:EventTrigger EventName="MouseDoubleClick">
-                    <b:InvokeCommandAction Command="{Binding AndroidToolsClickedCommand}" CommandParameter="{Binding ElementName=AndroidToolsListBox, Path=SelectedItem}" />
-                </b:EventTrigger>
-            </b:Interaction.Triggers>
-
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Grid>
@@ -141,12 +132,17 @@
                 </DataTemplate>
             </ListBox.ItemTemplate>
 
-            <!--  ListBox横排  -->
             <ListBox.ItemsPanel>
                 <ItemsPanelTemplate>
                     <WrapPanel Orientation="Horizontal" />
                 </ItemsPanelTemplate>
             </ListBox.ItemsPanel>
+
+            <ListBox.ItemContainerStyle>
+                <Style BasedOn="{StaticResource ListBoxItemStyleKey}" TargetType="ListBoxItem">
+                    <EventSetter Event="PreviewMouseDown" Handler="AndroidToolsListBox_ListBoxItem_PreviewMouseDown" />
+                </Style>
+            </ListBox.ItemContainerStyle>
         </ListBox>
 
         <TextBlock
@@ -157,18 +153,10 @@
             Text="Socket通信工具" />
 
         <ListBox
-            x:Name="SocketToolsListBox"
             Grid.Row="4"
             Background="Transparent"
             BorderThickness="0"
-            ItemContainerStyle="{StaticResource ListBoxItemStyleKey}"
             ItemsSource="{Binding SocketTools}">
-            <b:Interaction.Triggers>
-                <b:EventTrigger EventName="MouseDoubleClick">
-                    <b:InvokeCommandAction Command="{Binding SocketToolsMouseDoubleClickCommand}" CommandParameter="{Binding ElementName=SocketToolsListBox, Path=SelectedItem}" />
-                </b:EventTrigger>
-            </b:Interaction.Triggers>
-
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Grid>
@@ -195,12 +183,17 @@
                 </DataTemplate>
             </ListBox.ItemTemplate>
 
-            <!--  ListBox横排  -->
             <ListBox.ItemsPanel>
                 <ItemsPanelTemplate>
                     <WrapPanel Orientation="Horizontal" />
                 </ItemsPanelTemplate>
             </ListBox.ItemsPanel>
+
+            <ListBox.ItemContainerStyle>
+                <Style BasedOn="{StaticResource ListBoxItemStyleKey}" TargetType="ListBoxItem">
+                    <EventSetter Event="PreviewMouseDown" Handler="SocketToolsListBox_ListBoxItem_PreviewMouseDown" />
+                </Style>
+            </ListBox.ItemContainerStyle>
         </ListBox>
 
         <TextBlock
@@ -211,18 +204,10 @@
             Text="其他工具" />
 
         <ListBox
-            x:Name="OtherToolsListBox"
             Grid.Row="6"
             Background="Transparent"
             BorderThickness="0"
-            ItemContainerStyle="{StaticResource ListBoxItemStyleKey}"
             ItemsSource="{Binding OtherTools}">
-            <b:Interaction.Triggers>
-                <b:EventTrigger EventName="MouseDoubleClick">
-                    <b:InvokeCommandAction Command="{Binding OtherToolsMouseDoubleClickCommand}" CommandParameter="{Binding ElementName=OtherToolsListBox, Path=SelectedItem}" />
-                </b:EventTrigger>
-            </b:Interaction.Triggers>
-
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Grid>
@@ -249,12 +234,17 @@
                 </DataTemplate>
             </ListBox.ItemTemplate>
 
-            <!--  ListBox横排  -->
             <ListBox.ItemsPanel>
                 <ItemsPanelTemplate>
                     <WrapPanel Orientation="Horizontal" />
                 </ItemsPanelTemplate>
             </ListBox.ItemsPanel>
+
+            <ListBox.ItemContainerStyle>
+                <Style BasedOn="{StaticResource ListBoxItemStyleKey}" TargetType="ListBoxItem">
+                    <EventSetter Event="PreviewMouseDown" Handler="OtherToolsListBox_ListBoxItem_PreviewMouseDown" />
+                </Style>
+            </ListBox.ItemContainerStyle>
         </ListBox>
     </Grid>
 </Window>
