--- a/DevKit/Views/AndroidDebugBridgeView.xaml
+++ b/DevKit/Views/AndroidDebugBridgeView.xaml
@@ -5,12 +5,21 @@
     xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:prism="http://prismlibrary.com/"
     xmlns:vm="clr-namespace:DevKit.ViewModels"
+    Width="615"
+    Height="395"
     d:DataContext="{d:DesignInstance Type=vm:AndroidDebugBridgeViewModel}"
-    d:DesignHeight="560"
-    d:DesignWidth="600"
-    Background="white"
+    Background="{DynamicResource DevKitBackgroundBrush}"
     mc:Ignorable="d">
+
+    <prism:Dialog.WindowStyle>
+        <Style TargetType="Window">
+            <Setter Property="prism:Dialog.WindowStartupLocation" Value="CenterScreen" />
+            <Setter Property="SizeToContent" Value="WidthAndHeight" />
+            <Setter Property="ResizeMode" Value="NoResize" />
+        </Style>
+    </prism:Dialog.WindowStyle>
 
     <UserControl.Resources>
         <Style TargetType="TextBlock">
@@ -40,14 +49,16 @@
 
                 <TextBlock
                     Grid.Column="0"
+                    Width="100"
                     VerticalAlignment="Center"
                     Text="选择设备" />
 
                 <ComboBox
                     x:Name="DeviceComboBox"
                     Grid.Column="1"
-                    Margin="10,0"
+                    Margin="0,0,10,0"
                     VerticalContentAlignment="Center"
+                    BorderBrush="{DynamicResource DevKitBorderBrush}"
                     FontSize="14"
                     ItemsSource="{Binding DeviceItems}">
                     <b:Interaction.Triggers>
@@ -59,165 +70,132 @@
 
                 <Button
                     Grid.Column="2"
+                    BorderBrush="{DynamicResource DevKitBorderBrush}"
                     Command="{Binding RefreshDeviceCommand}"
-                    Content="&#xe602;"
-                    FontFamily="/DevKit;component/Fonts/#iconfont"
-                    FontSize="16" />
+                    Content="刷新" />
             </Grid>
 
-            <Border
-                Grid.Row="1"
-                Margin="10,0,10,10"
-                BorderThickness="1"
-                CornerRadius="4">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                    </Grid.RowDefinitions>
+            <Grid Grid.Row="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
 
-                    <Grid Grid.Row="0" Margin="10">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="2*" />
-                        </Grid.ColumnDefinitions>
+                <DockPanel
+                    Grid.Row="0"
+                    Margin="10"
+                    LastChildFill="True">
+                    <TextBlock
+                        Width="100"
+                        VerticalAlignment="Center"
+                        Text="设备品牌" />
 
-                        <TextBlock
-                            Grid.Column="0"
-                            VerticalAlignment="Center"
-                            Text="设备品牌" />
+                    <TextBlock VerticalAlignment="Center" Text="{Binding DeviceBrand}" />
+                </DockPanel>
 
-                        <TextBlock
-                            Grid.Column="1"
-                            VerticalAlignment="Center"
-                            Text="{Binding DeviceBrand}" />
-                    </Grid>
+                <DockPanel
+                    Grid.Row="1"
+                    Margin="10"
+                    LastChildFill="True">
+                    <TextBlock
+                        Width="100"
+                        VerticalAlignment="Center"
+                        Text="ABI架构" />
 
-                    <Grid Grid.Row="1" Margin="10">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="2*" />
-                        </Grid.ColumnDefinitions>
+                    <TextBlock
+                        VerticalAlignment="Center"
+                        Text="{Binding DeviceAbi}"
+                        TextWrapping="Wrap" />
+                </DockPanel>
 
-                        <TextBlock
-                            Grid.Column="0"
-                            VerticalAlignment="Center"
-                            Text="ABI架构" />
+                <DockPanel
+                    Grid.Row="2"
+                    Margin="10"
+                    LastChildFill="True">
+                    <TextBlock
+                        Width="100"
+                        VerticalAlignment="Center"
+                        Text="Android版本" />
 
-                        <TextBlock
-                            Grid.Column="1"
-                            VerticalAlignment="Center"
-                            Text="{Binding DeviceAbi}"
-                            TextWrapping="Wrap" />
-                    </Grid>
+                    <TextBlock VerticalAlignment="Center" Text="{Binding AndroidVersion}" />
+                </DockPanel>
 
-                    <Grid Grid.Row="2" Margin="10">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="2*" />
-                        </Grid.ColumnDefinitions>
+                <DockPanel
+                    Grid.Row="3"
+                    Margin="10"
+                    LastChildFill="True">
+                    <TextBlock
+                        Width="100"
+                        VerticalAlignment="Center"
+                        Text="屏幕分辨率" />
 
-                        <TextBlock
-                            Grid.Column="0"
-                            VerticalAlignment="Center"
-                            Text="Android版本" />
+                    <TextBlock VerticalAlignment="Center" Text="{Binding DeviceSize}" />
+                </DockPanel>
 
-                        <TextBlock
-                            Grid.Column="1"
-                            VerticalAlignment="Center"
-                            Text="{Binding AndroidVersion}" />
-                    </Grid>
+                <DockPanel
+                    Grid.Row="4"
+                    Margin="10"
+                    LastChildFill="True">
+                    <TextBlock
+                        Width="100"
+                        VerticalAlignment="Center"
+                        Text="屏幕密度" />
 
-                    <Grid Grid.Row="3" Margin="10">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="2*" />
-                        </Grid.ColumnDefinitions>
+                    <TextBlock VerticalAlignment="Center" Text="{Binding DeviceDensity}" />
+                </DockPanel>
 
-                        <TextBlock
-                            Grid.Column="0"
-                            VerticalAlignment="Center"
-                            Text="屏幕分辨率" />
+                <DockPanel
+                    Grid.Row="5"
+                    Margin="10"
+                    LastChildFill="True">
+                    <TextBlock
+                        Width="100"
+                        VerticalAlignment="Center"
+                        Text="电池状态" />
 
-                        <TextBlock
-                            Grid.Column="1"
-                            VerticalAlignment="Center"
-                            Text="{Binding DeviceSize}" />
-                    </Grid>
+                    <StackPanel Orientation="Horizontal">
+                        <Border
+                            Width="40"
+                            Height="18"
+                            BorderBrush="Black"
+                            BorderThickness="1"
+                            CornerRadius="2">
+                            <ProgressBar
+                                Height="16"
+                                Margin="1"
+                                VerticalAlignment="Center"
+                                Background="Transparent"
+                                BorderThickness="0"
+                                FontSize="10"
+                                Value="{Binding BatteryProgress}" />
+                        </Border>
 
-                    <Grid Grid.Row="4" Margin="10">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="2*" />
-                        </Grid.ColumnDefinitions>
+                        <Border
+                            Width="2"
+                            Height="10"
+                            Background="Black" />
 
-                        <TextBlock
-                            Grid.Column="0"
-                            VerticalAlignment="Center"
-                            Text="屏幕密度" />
+                        <TextBlock Margin="10,0" Text="{Binding BatteryState}" />
+                    </StackPanel>
+                </DockPanel>
 
-                        <TextBlock
-                            Grid.Column="1"
-                            VerticalAlignment="Center"
-                            Text="{Binding DeviceDensity}" />
-                    </Grid>
+                <DockPanel
+                    Grid.Row="6"
+                    Margin="10"
+                    LastChildFill="True">
+                    <TextBlock
+                        Width="100"
+                        VerticalAlignment="Center"
+                        Text="电池温度" />
 
-                    <Grid Grid.Row="5" Margin="10">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="2*" />
-                        </Grid.ColumnDefinitions>
-
-                        <TextBlock Grid.Column="0" Text="电池状态" />
-
-                        <StackPanel Grid.Column="1" Orientation="Horizontal">
-                            <Border
-                                Width="40"
-                                Height="18"
-                                BorderBrush="Black"
-                                BorderThickness="1"
-                                CornerRadius="2">
-                                <ProgressBar
-                                    Height="16"
-                                    Margin="1"
-                                    VerticalAlignment="Center"
-                                    Background="Transparent"
-                                    BorderThickness="0"
-                                    Value="{Binding BatteryProgress}" />
-                            </Border>
-
-                            <Border
-                                Width="2"
-                                Height="10"
-                                Background="Black" />
-
-                            <TextBlock Margin="10,0" Text="{Binding BatteryState}" />
-                        </StackPanel>
-                    </Grid>
-
-                    <Grid Grid.Row="6" Margin="10">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="2*" />
-                        </Grid.ColumnDefinitions>
-
-                        <TextBlock
-                            Grid.Column="0"
-                            VerticalAlignment="Center"
-                            Text="电池温度" />
-
-                        <TextBlock
-                            Grid.Column="1"
-                            VerticalAlignment="Center"
-                            Text="{Binding BatteryTemperature}" />
-                    </Grid>
-                </Grid>
-            </Border>
+                    <TextBlock VerticalAlignment="Center" Text="{Binding BatteryTemperature}" />
+                </DockPanel>
+            </Grid>
 
             <UniformGrid
                 Grid.Row="2"
@@ -229,24 +207,28 @@
                 <Button
                     Margin="0,0,5,0"
                     HorizontalAlignment="Stretch"
+                    BorderBrush="{DynamicResource DevKitBorderBrush}"
                     Command="{Binding OutputImageCommand}"
                     Content="导出截屏" />
 
                 <Button
                     Margin="5,0,0,0"
                     HorizontalAlignment="Stretch"
+                    BorderBrush="{DynamicResource DevKitBorderBrush}"
                     Command="{Binding ScreenshotCommand}"
                     Content="截取屏幕" />
 
                 <Button
                     Margin="0,5,5,0"
                     HorizontalAlignment="Stretch"
+                    BorderBrush="{DynamicResource DevKitBorderBrush}"
                     Command="{Binding RebootDeviceCommand}"
                     Content="重启设备" />
 
                 <Button
                     Margin="5,5,0,0"
                     HorizontalAlignment="Stretch"
+                    BorderBrush="{DynamicResource DevKitBorderBrush}"
                     Command="{Binding InstallCommand}"
                     Content="安装软件" />
             </UniformGrid>
@@ -258,21 +240,21 @@
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
-            <Grid Grid.Row="0" Margin="10">
-                <TextBlock VerticalAlignment="Center" Text="非系统软件包" />
+            <DockPanel Grid.Row="0" Margin="0,10,10,10">
+                <TextBlock VerticalAlignment="Center" Text="第三方软件" />
 
                 <Button
                     HorizontalAlignment="Right"
+                    BorderBrush="{DynamicResource DevKitBorderBrush}"
                     Command="{Binding SortApplicationCommand}"
-                    Content="&#xe612;"
-                    FontFamily="/DevKit;component/Fonts/#iconfont"
-                    FontSize="16" />
-            </Grid>
+                    Content="排序" />
+            </DockPanel>
 
             <ListBox
                 x:Name="PackageListBox"
                 Grid.Row="1"
                 Margin="0,0,10,10"
+                BorderBrush="{DynamicResource DevKitBorderBrush}"
                 BorderThickness="1"
                 ItemsSource="{Binding ApplicationPackages}"
                 ScrollViewer.CanContentScroll="False">
