feat(AndroidDebugBridge): 优化应用卸载功能
- 为 AndroidDebugBridgeView 添加 SelectionChanged 事件触发器
- 在 AndroidDebugBridgeViewModel 中实现 PackageSelectedCommand 和修改 UninstallCommand
- 优化应用卸载流程，增加选中应用的逻辑判断
- 调整 MainWindow 高度以适应界面变化

--- a/DevKit/Views/AndroidDebugBridgeView.xaml
+++ b/DevKit/Views/AndroidDebugBridgeView.xaml
@@ -258,6 +258,12 @@
                 BorderThickness="1"
                 ItemsSource="{Binding ApplicationPackages}"
                 ScrollViewer.CanContentScroll="False">
+                <b:Interaction.Triggers>
+                    <b:EventTrigger EventName="SelectionChanged">
+                        <b:InvokeCommandAction Command="{Binding PackageSelectedCommand}" CommandParameter="{Binding ElementName=PackageListBox, Path=SelectedItem}" />
+                    </b:EventTrigger>
+                </b:Interaction.Triggers>
+
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <TextBlock Text="{Binding}" TextWrapping="Wrap" />
@@ -269,7 +275,6 @@
                         <MenuItem
                             Width="95"
                             Command="{Binding UninstallCommand}"
-                            CommandParameter="{Binding ElementName=PackageListBox, Path=SelectedItem}"
                             Header="卸载" />
                     </ContextMenu>
                 </ListBox.ContextMenu>
