--- a/DevKit/Views/AndroidDebugBridgeView.xaml
+++ b/DevKit/Views/AndroidDebugBridgeView.xaml
@@ -7,7 +7,8 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
     xmlns:vm="clr-namespace:DevKit.ViewModels"
-    Width="365"
+    x:Name="TargetView"
+    Width="615"
     Height="400"
     d:DataContext="{d:DesignInstance Type=vm:AndroidDebugBridgeViewModel}"
     Background="{DynamicResource DevKitBackgroundBrush}"
@@ -28,6 +29,11 @@
     </UserControl.Resources>
 
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition x:Name="LeftPanelColumn" Width="*" />
+            <ColumnDefinition x:Name="RightPanelColumn" Width="0" />
+        </Grid.ColumnDefinitions>
+
         <Grid Grid.Column="0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
@@ -232,7 +238,7 @@
             </UniformGrid>
         </Grid>
 
-        <Grid Grid.Column="1" Visibility="Collapsed">
+        <Grid x:Name="RightPanel" Grid.Column="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="*" />
