--- a/DevKit/Views/ApplicationPackageView.xaml
+++ b/DevKit/Views/ApplicationPackageView.xaml
@@ -228,31 +228,24 @@
                             <RowDefinition />
                         </Grid.RowDefinitions>
 
-                        <Image Grid.Row="0" Source="/DevKit;component/Images/apk.png" />
+                        <Button
+                            Grid.Row="0"
+                            Width="50"
+                            Height="50"
+                            Background="Transparent"
+                            BorderThickness="0"
+                            Command="{Binding DataContext.OpenFileFolderCommand, ElementName=TargetListBox}"
+                            CommandParameter="{Binding FullName}">
+                            <Image Source="/DevKit;component/Images/apk.png" />
+                        </Button>
 
-                        <Grid Grid.Row="1">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition />
-                                <ColumnDefinition Width="Auto" />
-                            </Grid.ColumnDefinitions>
-
-                            <TextBlock
-                                Grid.Column="0"
-                                Margin="10,0,0,0"
-                                VerticalAlignment="Center"
-                                FontSize="12"
-                                Text="{Binding FileName}" />
-
-                            <Button
-                                Grid.Column="1"
-                                Background="Transparent"
-                                BorderThickness="0"
-                                Command="{Binding DataContext.OpenFileFolderCommand, ElementName=TargetListBox}"
-                                CommandParameter="{Binding FullName}"
-                                Content="&#xe701;"
-                                FontFamily="/DevKit;component/Fonts/#iconfont"
-                                FontSize="16" />
-                        </Grid>
+                        <TextBlock
+                            Grid.Row="1"
+                            Margin="10,5,10,0"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            FontSize="12"
+                            Text="{Binding FileName}" />
                     </Grid>
                 </DataTemplate>
             </ListBox.ItemTemplate>
