--- a/DevKit/App.xaml
+++ b/DevKit/App.xaml
@@ -5,15 +5,18 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
-    mc:Ignorable="d" >
+    mc:Ignorable="d">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/SkinDefault.xaml"/>
-                <ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/Theme.xaml"/>
-                
-                <ResourceDictionary Source="Colors/LightColor.xaml"/>
-                <ResourceDictionary Source="Colors/ColorBrushes.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/SkinDefault.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/Theme.xaml" />
+
+                <ResourceDictionary Source="Colors/LightColor.xaml" />
+                <ResourceDictionary Source="Colors/ColorBrushes.xaml" />
+
+                <ResourceDictionary Source="Styles/DataGridColumnHeaderStyle.xaml" />
+                <ResourceDictionary Source="Styles/DataGridTextColumnStyle.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
